[gd_scene load_steps=5 format=2]

[ext_resource path="res://objects/generic/level.gd" type="Script" id=1]
[ext_resource path="res://tiles/level_1/background/tileset_background_l1.tres" type="TileSet" id=2]
[ext_resource path="res://objects/generic/spawn_point.tscn" type="PackedScene" id=3]
[ext_resource path="res://tiles/level_1/foreground/tileset_foreground_l1.tres" type="TileSet" id=4]

[node name="Level" type="Node2D"]
script = ExtResource( 1 )

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]
scroll_ignore_camera_zoom = true

[node name="Background" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 0.5, 0.5 )
motion_offset = Vector2( -192, -160 )
motion_mirroring = Vector2( 512, 512 )

[node name="TileMap" type="TileMap" parent="ParallaxBackground/Background"]
tile_set = ExtResource( 2 )
format = 1
tile_data = PoolIntArray( 0, 0, 0, 1, 1, 0, 2, 2, 0, 3, 3, 0, 4, 4, 0, 5, 5, 0, 6, 6, 0, 7, 7, 0, 8, 0, 0, 9, 1, 0, 10, 2, 0, 11, 3, 0, 12, 4, 0, 13, 5, 0, 14, 6, 0, 15, 7, 0, 65536, 8, 0, 65537, 9, 0, 65538, 10, 0, 65539, 11, 0, 65540, 12, 0, 65541, 13, 0, 65542, 14, 0, 65543, 15, 0, 65544, 8, 0, 65545, 9, 0, 65546, 10, 0, 65547, 11, 0, 65548, 12, 0, 65549, 13, 0, 65550, 14, 0, 65551, 15, 0, 131072, 16, 0, 131073, 17, 0, 131074, 18, 0, 131075, 19, 0, 131076, 20, 0, 131077, 21, 0, 131078, 22, 0, 131079, 23, 0, 131080, 16, 0, 131081, 17, 0, 131082, 18, 0, 131083, 19, 0, 131084, 20, 0, 131085, 21, 0, 131086, 22, 0, 131087, 23, 0, 196608, 24, 0, 196609, 25, 0, 196610, 26, 0, 196611, 27, 0, 196612, 28, 0, 196613, 29, 0, 196614, 30, 0, 196615, 31, 0, 196616, 24, 0, 196617, 25, 0, 196618, 26, 0, 196619, 27, 0, 196620, 28, 0, 196621, 29, 0, 196622, 30, 0, 196623, 31, 0, 262144, 32, 0, 262145, 33, 0, 262146, 34, 0, 262147, 35, 0, 262148, 36, 0, 262149, 37, 0, 262150, 38, 0, 262151, 39, 0, 262152, 32, 0, 262153, 33, 0, 262154, 34, 0, 262155, 35, 0, 262156, 36, 0, 262157, 37, 0, 262158, 38, 0, 262159, 39, 0, 327680, 40, 0, 327681, 41, 0, 327682, 42, 0, 327683, 43, 0, 327684, 44, 0, 327685, 45, 0, 327686, 46, 0, 327687, 47, 0, 327688, 40, 0, 327689, 41, 0, 327690, 42, 0, 327691, 43, 0, 327692, 44, 0, 327693, 45, 0, 327694, 46, 0, 327695, 47, 0, 393216, 48, 0, 393217, 49, 0, 393218, 50, 0, 393219, 51, 0, 393220, 52, 0, 393221, 53, 0, 393222, 54, 0, 393223, 55, 0, 393224, 48, 0, 393225, 49, 0, 393226, 50, 0, 393227, 51, 0, 393228, 52, 0, 393229, 53, 0, 393230, 54, 0, 393231, 55, 0, 458752, 56, 0, 458753, 57, 0, 458754, 58, 0, 458755, 59, 0, 458756, 60, 0, 458757, 61, 0, 458758, 62, 0, 458759, 63, 0, 458760, 56, 0, 458761, 57, 0, 458762, 58, 0, 458763, 59, 0, 458764, 60, 0, 458765, 61, 0, 458766, 62, 0, 458767, 63, 0, 524288, 0, 0, 524289, 1, 0, 524290, 2, 0, 524291, 3, 0, 524292, 4, 0, 524293, 5, 0, 524294, 6, 0, 524295, 7, 0, 524296, 0, 0, 524297, 1, 0, 524298, 2, 0, 524299, 3, 0, 524300, 4, 0, 524301, 5, 0, 524302, 6, 0, 524303, 7, 0, 589824, 8, 0, 589825, 9, 0, 589826, 10, 0, 589827, 11, 0, 589828, 12, 0, 589829, 13, 0, 589830, 14, 0, 589831, 15, 0, 589832, 8, 0, 589833, 9, 0, 589834, 10, 0, 589835, 11, 0, 589836, 12, 0, 589837, 13, 0, 589838, 14, 0, 589839, 15, 0, 655360, 16, 0, 655361, 17, 0, 655362, 18, 0, 655363, 19, 0, 655364, 20, 0, 655365, 21, 0, 655366, 22, 0, 655367, 23, 0, 655368, 16, 0, 655369, 17, 0, 655370, 18, 0, 655371, 19, 0, 655372, 20, 0, 655373, 21, 0, 655374, 22, 0, 655375, 23, 0, 720896, 24, 0, 720897, 25, 0, 720898, 26, 0, 720899, 27, 0, 720900, 28, 0, 720901, 29, 0, 720902, 30, 0, 720903, 31, 0, 720904, 24, 0, 720905, 25, 0, 720906, 26, 0, 720907, 27, 0, 720908, 28, 0, 720909, 29, 0, 720910, 30, 0, 720911, 31, 0, 786432, 32, 0, 786433, 33, 0, 786434, 34, 0, 786435, 35, 0, 786436, 36, 0, 786437, 37, 0, 786438, 38, 0, 786439, 39, 0, 786440, 32, 0, 786441, 33, 0, 786442, 34, 0, 786443, 35, 0, 786444, 36, 0, 786445, 37, 0, 786446, 38, 0, 786447, 39, 0, 851968, 40, 0, 851969, 41, 0, 851970, 42, 0, 851971, 43, 0, 851972, 44, 0, 851973, 45, 0, 851974, 46, 0, 851975, 47, 0, 851976, 40, 0, 851977, 41, 0, 851978, 42, 0, 851979, 43, 0, 851980, 44, 0, 851981, 45, 0, 851982, 46, 0, 851983, 47, 0, 917504, 48, 0, 917505, 49, 0, 917506, 50, 0, 917507, 51, 0, 917508, 52, 0, 917509, 53, 0, 917510, 54, 0, 917511, 55, 0, 917512, 48, 0, 917513, 49, 0, 917514, 50, 0, 917515, 51, 0, 917516, 52, 0, 917517, 53, 0, 917518, 54, 0, 917519, 55, 0, 983040, 56, 0, 983041, 57, 0, 983042, 58, 0, 983043, 59, 0, 983044, 60, 0, 983045, 61, 0, 983046, 62, 0, 983047, 63, 0, 983048, 56, 0, 983049, 57, 0, 983050, 58, 0, 983051, 59, 0, 983052, 60, 0, 983053, 61, 0, 983054, 62, 0, 983055, 63, 0 )

[node name="Objects" type="Node2D" parent="."]

[node name="AudioTriggers" type="Node2D" parent="Objects"]

[node name="BinaryPlatforms" type="Node2D" parent="Objects"]

[node name="Crates" type="Node2D" parent="Objects"]

[node name="CrumblingPlatforms" type="Node2D" parent="Objects"]

[node name="DeathTileColliders" type="Node2D" parent="Objects"]

[node name="Elevators" type="Node2D" parent="Objects"]

[node name="Enemies" type="Node2D" parent="Objects"]

[node name="EventTriggers" type="Node2D" parent="Objects"]

[node name="ExplosiveBarrels" type="Node2D" parent="Objects"]

[node name="Ladders" type="Node2D" parent="Objects"]

[node name="Pickups" type="Node2D" parent="Objects"]

[node name="Projectiles" type="Node2D" parent="Objects"]

[node name="VisualObjects" type="Node2D" parent="Objects"]

[node name="SpawnPoint" parent="." instance=ExtResource( 3 )]
position = Vector2( 320, 287.962 )

[node name="ParallaxForeground" type="ParallaxBackground" parent="."]
layer = 2
scroll_ignore_camera_zoom = true

[node name="Foreground" type="ParallaxLayer" parent="ParallaxForeground"]
visible = false
motion_scale = Vector2( 1.5, 1.25 )
motion_offset = Vector2( 0, 112 )
motion_mirroring = Vector2( 1024, 0 )

[node name="TileMap" type="TileMap" parent="ParallaxForeground/Foreground"]
z_index = 1000
z_as_relative = false
tile_set = ExtResource( 4 )
format = 1
tile_data = PoolIntArray( 458752, 4, 0, 458753, 5, 0, 458754, 4, 0, 458755, 5, 0, 458756, 4, 0, 458757, 5, 0, 458758, 4, 0, 458759, 5, 0, 458760, 4, 0, 458761, 5, 0, 458762, 4, 0, 458763, 5, 0, 458764, 4, 0, 458765, 5, 0, 458766, 4, 0, 458767, 5, 0, 458768, 4, 0, 458769, 5, 0, 458770, 4, 0, 458771, 5, 0, 458772, 4, 0, 458773, 5, 0, 458774, 4, 0, 458775, 5, 0, 524288, 6, 0, 524289, 7, 0, 524290, 6, 0, 524291, 7, 0, 524292, 6, 0, 524293, 7, 0, 524294, 6, 0, 524295, 7, 0, 524296, 6, 0, 524297, 7, 0, 524298, 6, 0, 524299, 7, 0, 524300, 6, 0, 524301, 7, 0, 524302, 6, 0, 524303, 7, 0, 524304, 6, 0, 524305, 7, 0, 524306, 6, 0, 524307, 7, 0, 524308, 6, 0, 524309, 7, 0, 524310, 6, 0, 524311, 7, 0, 589824, 0, 0, 589825, 1, 0, 589826, 0, 0, 589827, 1, 0, 589828, 0, 0, 589829, 1, 0, 589830, 0, 0, 589831, 1, 0, 589832, 0, 0, 589833, 1, 0, 589834, 0, 0, 589835, 1, 0, 589836, 0, 0, 589837, 1, 0, 589838, 0, 0, 589839, 1, 0, 589840, 0, 0, 589841, 1, 0, 589842, 0, 0, 589843, 1, 0, 589844, 0, 0, 589845, 1, 0, 589846, 0, 0, 589847, 1, 0, 655360, 0, 0, 655361, 1, 0, 655362, 0, 0, 655363, 1, 0, 655364, 0, 0, 655365, 1, 0, 655366, 0, 0, 655367, 1, 0, 655368, 0, 0, 655369, 1, 0, 655370, 0, 0, 655371, 1, 0, 655372, 0, 0, 655373, 1, 0, 655374, 0, 0, 655375, 1, 0, 655376, 0, 0, 655377, 1, 0, 655378, 0, 0, 655379, 1, 0, 655380, 0, 0, 655381, 1, 0, 655382, 0, 0, 655383, 1, 0, 720896, 0, 0, 720897, 1, 0, 720898, 0, 0, 720899, 1, 0, 720900, 0, 0, 720901, 1, 0, 720902, 0, 0, 720903, 1, 0, 720904, 0, 0, 720905, 1, 0, 720906, 0, 0, 720907, 1, 0, 720908, 0, 0, 720909, 1, 0, 720910, 0, 0, 720911, 1, 0, 720912, 0, 0, 720913, 1, 0, 720914, 0, 0, 720915, 1, 0, 720916, 0, 0, 720917, 1, 0, 720918, 0, 0, 720919, 1, 0, 786432, 0, 0, 786433, 1, 0, 786434, 0, 0, 786435, 1, 0, 786436, 0, 0, 786437, 1, 0, 786438, 0, 0, 786439, 1, 0, 786440, 0, 0, 786441, 1, 0, 786442, 0, 0, 786443, 1, 0, 786444, 0, 0, 786445, 1, 0, 786446, 0, 0, 786447, 1, 0, 786448, 0, 0, 786449, 1, 0, 786450, 0, 0, 786451, 1, 0, 786452, 0, 0, 786453, 1, 0, 786454, 0, 0, 786455, 1, 0, 851968, 0, 0, 851969, 1, 0, 851970, 0, 0, 851971, 1, 0, 851972, 0, 0, 851973, 1, 0, 851974, 0, 0, 851975, 1, 0, 851976, 0, 0, 851977, 1, 0, 851978, 0, 0, 851979, 1, 0, 851980, 0, 0, 851981, 1, 0, 851982, 0, 0, 851983, 1, 0, 851984, 0, 0, 851985, 1, 0, 851986, 0, 0, 851987, 1, 0, 851988, 0, 0, 851989, 1, 0, 851990, 0, 0, 851991, 1, 0, 917504, 0, 0, 917505, 1, 0, 917506, 0, 0, 917507, 1, 0, 917508, 0, 0, 917509, 1, 0, 917510, 0, 0, 917511, 1, 0, 917512, 0, 0, 917513, 1, 0, 917514, 0, 0, 917515, 1, 0, 917516, 0, 0, 917517, 1, 0, 917518, 0, 0, 917519, 1, 0, 917520, 0, 0, 917521, 1, 0, 917522, 0, 0, 917523, 1, 0, 917524, 0, 0, 917525, 1, 0, 917526, 0, 0, 917527, 1, 0, 983040, 0, 0, 983041, 1, 0, 983042, 0, 0, 983043, 1, 0, 983044, 0, 0, 983045, 1, 0, 983046, 0, 0, 983047, 1, 0, 983048, 0, 0, 983049, 1, 0, 983050, 0, 0, 983051, 1, 0, 983052, 0, 0, 983053, 1, 0, 983054, 0, 0, 983055, 1, 0, 1048576, 0, 0, 1048577, 1, 0, 1048578, 0, 0, 1048579, 1, 0, 1048580, 0, 0, 1048581, 1, 0, 1048582, 0, 0, 1048583, 1, 0, 1048584, 0, 0, 1048585, 1, 0, 1048586, 0, 0, 1048587, 1, 0, 1048588, 0, 0, 1048589, 1, 0, 1048590, 0, 0, 1048591, 1, 0, 1114112, 0, 0, 1114113, 1, 0, 1114114, 0, 0, 1114115, 1, 0, 1114116, 0, 0, 1114117, 1, 0, 1114118, 0, 0, 1114119, 1, 0, 1114120, 0, 0, 1114121, 1, 0, 1114122, 0, 0, 1114123, 1, 0, 1114124, 0, 0, 1114125, 1, 0, 1114126, 0, 0, 1114127, 1, 0, 1179648, 0, 0, 1179649, 1, 0, 1179650, 0, 0, 1179651, 1, 0, 1179652, 0, 0, 1179653, 1, 0, 1179654, 0, 0, 1179655, 1, 0, 1179656, 0, 0, 1179657, 1, 0, 1179658, 0, 0, 1179659, 1, 0, 1179660, 0, 0, 1179661, 1, 0, 1179662, 0, 0, 1179663, 1, 0, 1245184, 0, 0, 1245185, 1, 0, 1245186, 0, 0, 1245187, 1, 0, 1245188, 0, 0, 1245189, 1, 0, 1245190, 0, 0, 1245191, 1, 0, 1245192, 0, 0, 1245193, 1, 0, 1245194, 0, 0, 1245195, 1, 0, 1245196, 0, 0, 1245197, 1, 0, 1245198, 0, 0, 1245199, 1, 0, 1310720, 0, 0, 1310721, 1, 0, 1310722, 0, 0, 1310723, 1, 0, 1310724, 0, 0, 1310725, 1, 0, 1310726, 0, 0, 1310727, 1, 0, 1310728, 0, 0, 1310729, 1, 0, 1310730, 0, 0, 1310731, 1, 0, 1310732, 0, 0, 1310733, 1, 0, 1310734, 0, 0, 1310735, 1, 0, 1376256, 0, 0, 1376257, 1, 0, 1376258, 0, 0, 1376259, 1, 0, 1376260, 0, 0, 1376261, 1, 0, 1376262, 0, 0, 1376263, 1, 0, 1376264, 0, 0, 1376265, 1, 0, 1376266, 0, 0, 1376267, 1, 0, 1376268, 0, 0, 1376269, 1, 0, 1376270, 0, 0, 1376271, 1, 0, 1441792, 0, 0, 1441793, 1, 0, 1441794, 0, 0, 1441795, 1, 0, 1441796, 0, 0, 1441797, 1, 0, 1441798, 0, 0, 1441799, 1, 0, 1441800, 0, 0, 1441801, 1, 0, 1441802, 0, 0, 1441803, 1, 0, 1441804, 0, 0, 1441805, 1, 0, 1441806, 0, 0, 1441807, 1, 0, 1507328, 0, 0, 1507329, 1, 0, 1507330, 0, 0, 1507331, 1, 0, 1507332, 0, 0, 1507333, 1, 0, 1507334, 0, 0, 1507335, 1, 0, 1507336, 0, 0, 1507337, 1, 0, 1507338, 0, 0, 1507339, 1, 0, 1507340, 0, 0, 1507341, 1, 0, 1507342, 0, 0, 1507343, 1, 0, 1572864, 0, 0, 1572865, 1, 0, 1572866, 0, 0, 1572867, 1, 0, 1572868, 0, 0, 1572869, 1, 0, 1572870, 0, 0, 1572871, 1, 0, 1572872, 0, 0, 1572873, 1, 0, 1572874, 0, 0, 1572875, 1, 0, 1572876, 0, 0, 1572877, 1, 0, 1572878, 0, 0, 1572879, 1, 0, 1638400, 0, 0, 1638401, 1, 0, 1638402, 0, 0, 1638403, 1, 0, 1638404, 0, 0, 1638405, 1, 0, 1638406, 0, 0, 1638407, 1, 0, 1638408, 0, 0, 1638409, 1, 0, 1638410, 0, 0, 1638411, 1, 0, 1638412, 0, 0, 1638413, 1, 0, 1638414, 0, 0, 1638415, 1, 0, 1703936, 0, 0, 1703937, 1, 0, 1703938, 0, 0, 1703939, 1, 0, 1703940, 0, 0, 1703941, 1, 0, 1703942, 0, 0, 1703943, 1, 0, 1703944, 0, 0, 1703945, 1, 0, 1703946, 0, 0, 1703947, 1, 0, 1703948, 0, 0, 1703949, 1, 0, 1703950, 0, 0, 1703951, 1, 0, 1769472, 0, 0, 1769473, 1, 0, 1769474, 0, 0, 1769475, 1, 0, 1769476, 0, 0, 1769477, 1, 0, 1769478, 0, 0, 1769479, 1, 0, 1769480, 0, 0, 1769481, 1, 0, 1769482, 0, 0, 1769483, 1, 0, 1769484, 0, 0, 1769485, 1, 0, 1769486, 0, 0, 1769487, 1, 0, 1835008, 0, 0, 1835009, 1, 0, 1835010, 0, 0, 1835011, 1, 0, 1835012, 0, 0, 1835013, 1, 0, 1835014, 0, 0, 1835015, 1, 0, 1835016, 0, 0, 1835017, 1, 0, 1835018, 0, 0, 1835019, 1, 0, 1835020, 0, 0, 1835021, 1, 0, 1835022, 0, 0, 1835023, 1, 0, 1900544, 0, 0, 1900545, 1, 0, 1900546, 0, 0, 1900547, 1, 0, 1900548, 0, 0, 1900549, 1, 0, 1900550, 0, 0, 1900551, 1, 0, 1900552, 0, 0, 1900553, 1, 0, 1900554, 0, 0, 1900555, 1, 0, 1900556, 0, 0, 1900557, 1, 0, 1900558, 0, 0, 1900559, 1, 0, 1966080, 0, 0, 1966081, 1, 0, 1966082, 0, 0, 1966083, 1, 0, 1966084, 0, 0, 1966085, 1, 0, 1966086, 0, 0, 1966087, 1, 0, 1966088, 0, 0, 1966089, 1, 0, 1966090, 0, 0, 1966091, 1, 0, 1966092, 0, 0, 1966093, 1, 0, 1966094, 0, 0, 1966095, 1, 0 )

[node name="LevelSounds" type="AudioStreamPlayer" parent="."]

[node name="MusicPlayer" type="AudioStreamPlayer" parent="."]
pause_mode = 2
